test: JdbcTemplateTest 작성